closing feature #1247, Improve month view and add quarter/year views
git-svn-id: https://www.silverpeas.org/svn/silverpeas/components/trunk@3190 a8e77078-a1c7-4fa5-b8fc-53c5178a176c